# wstd

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/actions/install-rust/: action.yml
.github/workflows/: ci.yaml  publish.yml
aws/: Cargo.toml  README.md
aws-example/: Cargo.toml  README.md
aws/examples/: s3.rs
aws/src/: lib.rs
axum/: Cargo.toml
axum/examples/: hello_world.rs  hello_world_nomacro.rs  weather.rs
axum/macro/: Cargo.toml
axum/macro/src/: lib.rs
axum/src/: lib.rs
ci/: publish.rs
examples/: complex_http_client.rs  http_client.rs  http_server.rs  http_server_proxy.rs  tcp_stream_client.rs
macro/src/: lib.rs
src/: future.rs  http.rs  lib.rs  net.rs  rand.rs  runtime.rs  time.rs
src/future/: delay.rs
src/http/: body.rs  client.rs  error.rs  fields.rs  method.rs  mod.rs  request.rs  response.rs  scheme.rs  server.rs
src/io/: copy.rs  cursor.rs  empty.rs  mod.rs  read.rs  stdio.rs  streams.rs  write.rs
src/net/: mod.rs  tcp_listener.rs  tcp_stream.rs
src/rand/: mod.rs
src/runtime/: block_on.rs  mod.rs  reactor.rs
src/sys/: mod.rs
src/sys/p2/: io.rs  mod.rs  random.rs  stdio.rs  time.rs
src/sys/p2/http/: body.rs  client.rs  error.rs  fields.rs  mod.rs  request.rs  response.rs  server.rs
src/sys/p2/io/: mod.rs
src/sys/p2/net/: mod.rs  tcp_listener.rs  tcp_stream.rs
src/sys/p2/rand/: mod.rs
src/sys/p2/runtime/: mod.rs
src/sys/p2/time/: instant.rs  mod.rs
src/sys/p3/: io.rs  random.rs  runtime.rs  stdio.rs  time.rs
src/sys/p3/http/: body.rs  client.rs  fields.rs  method.rs  mod.rs  request.rs  response.rs  scheme.rs  server.rs
src/sys/p3/net/: mod.rs  tcp_listener.rs  tcp_stream.rs
src/time/: duration.rs  instant.rs  mod.rs
test-programs/: Cargo.toml  build.rs
test-programs/artifacts/: Cargo.toml  build.rs
test-programs/artifacts/tests/: http_server.rs  tcp_echo_server.rs
test-programs/src/: lib.rs
test-programs/tests/: aws_s3.rs  axum_hello_world.rs  axum_weather.rs  http_server.rs  http_server_proxy.rs  tcp_echo_server.rs  tcp_stream_client.rs
tests/: http_first_byte_timeout.rs  http_get.rs  http_get_json.rs  http_handle_error_code.rs  http_post.rs  http_post_json.rs  http_timeout.rs  sleep.rs  stdio.rs  timer.rs
