[package]
name = "wstd"
version.workspace = true
license.workspace = true
documentation = "https://docs.rs/wstd"
description = "An async standard library for Wasm Components and WASI 0.2"
readme = "README.md"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["json", "wasip2"]
json = ["dep:serde", "dep:serde_json"]
wasip2 = ["dep:wasip2"]
wasip3 = ["dep:wasip3"]

[build-dependencies]
cfg_aliases = "0.2"

[dependencies]
anyhow.workspace = true
async-task.workspace = true
bytes.workspace = true
cfg-if.workspace = true
futures-lite.workspace = true
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
itoa.workspace = true
pin-project-lite.workspace = true
slab.workspace = true
wasip2 = { workspace = true, optional = true }
wasip3 = { workspace = true, optional = true }
wstd-macro.workspace = true

# optional
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Auto-pull wasip3 deps when targeting wasm32-wasip3 so users don't need
# to also pass --features wasip3.
[target.'cfg(all(target_os = "wasi", target_env = "p3"))'.dependencies]
wasip3 = { workspace = true }

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
http-body-util.workspace = true
futures-concurrency.workspace = true
humantime.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[workspace]
members = [
    "axum",
    "axum/macro",
    "macro",
    "test-programs",
]
resolver = "2"

[workspace.package]
version = "0.6.6"
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wstd"
keywords = ["WebAssembly", "async", "stdlib", "Components"]
categories = ["wasm", "asynchronous"]
rust-version = "1.91.1"
authors = [
    "Yoshua Wuyts <rust@yosh.is>",
    "Pat Hickey <pat@moreproductive.org>",
    "Dan Gohman <dev@sunfishcode.online>",
]

[workspace.dependencies]
anyhow = "1"
async-task = "4.7"
axum = { version = "0.8.6", default-features = false }
bytes = "1.10.1"
cargo_metadata = "0.22"
cfg-if = "1"
clap = { version = "4.5.26", features = ["derive"] }
futures-core = "0.3.19"
futures-lite = "1.12.0"
futures-concurrency = "7.6"
humantime = "2.1.0"
heck = "0.5"
http = "1.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
itoa = "1"
pin-project-lite = "0.2.8"
quote = "1.0"
serde= "1"
serde_json = "1"
serde_qs = "0.15"
sync_wrapper = "1"
slab = "0.4.9"
syn = "2.0"
test-log = { version = "0.2", features = ["trace"] }
test-programs = { path = "test-programs" }
tower-service = "0.3.3"
ureq = { version = "3.1", default-features = false, features = ["json"] }
wasip2 = "1.0"
wasip3 = "0.5"
wit-bindgen = { version = "0.54", default-features = false, features = ["async", "async-spawn", "inter-task-wakeup"] }
wstd = { path = ".", version = "=0.6.6", default-features = false }
wstd-axum = { path = "./axum", version = "=0.6.6" }
wstd-axum-macro = { path = "./axum/macro", version = "=0.6.6" }
wstd-macro = { path = "./macro", version = "=0.6.6" }

[package.metadata.docs.rs]
all-features = true
targets = [
    "wasm32-wasip2"
]
