[package]
name = "wstd-aws"
description = "AWS rust sdk support for Wasm Components and WASI 0.2, based on wstd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
aws-smithy-async = { workspace = true }
aws-smithy-types = { workspace = true, features = ["http-body-1-x"] }
aws-smithy-runtime-api = { workspace = true, features = ["client", "http-1x"] }
http-body-util.workspace = true
sync_wrapper = { workspace = true, features = ["futures"] }
wstd.workspace = true

[dev-dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
# crc-fast is a transitive dep via aws-smithy-checksums, which
# is a dep of aws-sdk-s3 and others.
# When cargo resolves crc-fast to 1.6.0 via aws-smiothy-checksums 0.63.12,
# wasm-ld will crash building crc-fast. Until this is resolved, pinning
# crc-fast is the simplest way to avoid it
crc-fast = "=1.3.0"
