[package]
name = "wstd-axum"
description = "Support for axum as a wasi http server via wstd"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tower-service.workspace = true
wstd.workspace = true
wstd-axum-macro.workspace = true

[dev-dependencies]
anyhow.workspace = true
futures-concurrency.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_qs.workspace = true
axum = { workspace = true, features = ["query", "json", "macros"] }
