[package]
name = "test-programs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
fslock = "0.2.1"

[dev-dependencies]
anyhow.workspace = true
test-log.workspace = true
serde_json.workspace = true
ureq.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
heck.workspace = true
